<resources>
    <string name="app_name">World Cinema</string>

    <!-- Bottom Navbar -->
    <string name="title_home">Главное</string>
    <string name="title_compilation">Подборка</string>
    <string name="title_collections">Коллекции</string>
    <string name="title_profile">Профиль</string>
    <string name="image_default_description">Image</string>

    <!-- Home -->
    <string name="home_watch_btn_text"><b>Смотреть</b></string>
    <string name="home_trends_title"><b>В тренде</b></string>
    <string name="home_watched_title"><b>Вы смотрели</b></string>
    <string name="home_new_movies_title"><b>Новое</b></string>
    <string name="home_for_you_title"><b>Для вас</b></string>
    <string name="home_set_interesting_topics_text"><b>Указать интересы</b></string>

    <!-- Profile -->
    <string name="profile_change_btn_text"><b>Изменить</b></string>
    <string name="profile_messenger_btn_text"><b>Обсуждения</b></string>
    <string name="profile_history_btn_text"><b>История</b></string>
    <string name="profile_settings_btn_text"><b>Настройки</b></string>
    <string name="default_text">Имя Фамилия</string>
    <string name="profile_exit_btn_text"><b>Выход</b></string>

    <!-- Profile Dialog Fragment -->
    <string name="profile_dialog_fragment_gallery_btn"><b>Галерея</b></string>
    <string name="profile_dialog_fragment_camera_btn"><b>Камера</b></string>
    <string name="profile_dialog_fragment_save_btn"><b>Сохранить</b></string>
    <string name="profile_dialog_fragment_cancel_btn"><b>Отмена</b></string>

    <!-- Auth -->
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="sign_in_registration_btn_text"><b>Регистрация</b></string>
    <string name="sign_in_enter_btn_text"><b>Войти</b></string>
    <string name="sign_up_register_btn_text"><b>Зарегистрироваться</b></string>
    <string name="sign_up_have_account_text"><b>У меня уже есть аккаунт</b></string>
    <string name="compilation_empty_stack_text">Новые фильмы в подборке закончились</string>

    <!-- Discussions -->
    <string name="discussions_text"><b>Обсуждения</b></string>

    <!-- Movie -->
    <string name="age_18">18+</string>
    <string name="age_16">16+</string>
    <string name="age_12">12+</string>
    <string name="age_6">6+</string>
    <string name="age_0">0+</string>
    <string name="movie_description_title_text">Описание</string>
    <string name="movie_images_title_text">Кадры</string>
    <string name="movie_episodes_title_text">Эпизоды</string>
    <string name="movie_episodes_count_text">Эпизодов - </string>

    <!-- Chat -->
    <string name="chat_message_hint_text">Напишите сообщение…</string>

    <!-- Collections -->
    <string name="collections_title"><b>Коллекции</b></string>
    <string name="create_collection"><b>Создать коллекцию</b></string>
    <string name="collection_name_input_hint">Название</string>
    <string name="collection_save_btn"><b>Сохранить</b></string>
    <string name="collection_delete_btn"><b>Удалить</b></string>
    <string name="collection_choose_icon_btn"><b>Выбрать иконку</b></string>
    <string name="collection_change_title"><b>Изменить коллекцию</b></string>
    <string name="collection_choose_icon_title"><b>Выбрать иконку</b></string>
    <string name="collection_favourites_default_name">Избранное</string>

    <!-- Intent Data -->
    <string name="intent_data_for_chat_chat_id">chatId</string>
    <string name="intent_data_for_movies_collection_movie_id">movieIdFromCollection</string>
    <string name="intent_data_for_movies_collection_collection_id">collectionIdFromCollection</string>
    <string name="intent_data_for_collection_icon">collectionIconIndex</string>
    <string name="intent_data_for_episode_movie">episodeMovie</string>
    <string name="intent_data_for_episode_episode">episodeEpisode</string>
    <string name="intent_data_for_episode_episodes_count">episodeEpisodesCount</string>
    <string name="intent_data_for_episode_movie_years">episodeMovieYears</string>

    <!-- Dialog Fragment Data -->
    <string name="dialog_data_for_profile_avatar">profileAvatar</string>

    <!-- Alert Dialog Data -->
    <string name="alert_dialog_data_text">alertDialogText</string>

    <!-- Alert Text -->
    <string name="alert_text_empty_first_name">Пропущено поле "Имя"</string>
    <string name="alert_text_empty_last_name">Пропущено поле "Фамилия"</string>
    <string name="alert_text_empty_email">Пропущено поле "Email"</string>
    <string name="alert_text_empty_password">Пропущено поле "Пароль"</string>
    <string name="alert_text_empty_repeat_password">Пропущено поле "Повтор пароля"</string>
    <string name="alert_text_empty_chat_message">Сообщение не может быть пустым</string>
    <string name="alert_text_empty_collection_name">Название коллекции не должно быть пустым</string>
    <string name="alert_text_wrong_email">Некорректный email</string>
    <string name="alert_text_wrong_repeat_password">Пароли не совпадают</string>
    <string name="alert_text_auth_not_success">Неверный логин или пароль</string>
    <string name="alert_text_register_not_success">Запрос с ошибкой. Возможно, пользователь с указанным Email уже существует</string>
    <string name="alert_text_collection_with_favourite_name">Нельзя создать коллекцию с названием Избранное</string>
    <string name="alert_text_default">Ошибка на стороне сервера</string>
    <string name="alert_text_bad_api">Функционал не реализован на стороне сервера (:</string>
    <string name="alert_text_bad_figma">В тз и макете этого нет ¯\_(ツ)_/¯</string>
    <string name="alert_text_no_permissions">У приложения недостаточно прав</string>

    <!-- Alert Buttons Text -->
    <string name="alert_button_text_ok">Ок</string>
    <string name="alert_button_text_lol">Лол</string>
    <string name="alert_button_text_understandable">Понятно</string>
    <string name="alert_dialog_retry_btn_text">Попробовать снова</string>
    <string name="alert_dialog_exit_btn_text">Выйти</string>
    <string name="alert_dialog_error_text">Ошибка\nзагрузки данных</string>
</resources>