<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.worldcinema.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_compilation"
        android:name="com.example.worldcinema.ui.compilation.CompilationFragment"
        android:label="@string/title_compilation"
        tools:layout="@layout/fragment_compilation" />

    <fragment
        android:id="@+id/navigation_collections"
        android:name="com.example.worldcinema.ui.collections.CollectionsFragment"
        android:label="@string/title_collections"
        tools:layout="@layout/fragment_collections" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.worldcinema.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>