<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="1000dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewAvatar"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:background="@drawable/circle_shape"
            android:contentDescription="@string/image_default_description"
            android:scaleType="centerCrop"
            android:src="@drawable/test_image" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/default_text"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/default_text"
        android:textColor="@color/gray_a8_text"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserName"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonChangeProfile"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:background="@android:color/transparent"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:text="@string/profile_change_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="TextSizeCheck,TextContrastCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonProfileMessenger"
        style="@style/profileItemBtnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/profile_messenger_btn_text"
        app:icon="@drawable/profile_messenger"
        app:iconGravity="textStart"
        app:iconPadding="18dp"
        app:iconTint="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangeProfile" />

    <Button
        android:id="@+id/buttonProfileHistory"
        style="@style/profileItemBtnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_history_btn_text"
        app:icon="@drawable/profile_history"
        app:iconGravity="textStart"
        app:iconPadding="18dp"
        app:iconTint="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonProfileMessenger" />

    <Button
        android:id="@+id/buttonProfileSettings"
        style="@style/profileItemBtnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_settings_btn_text"
        app:icon="@drawable/profile_settings"
        app:iconGravity="textStart"
        app:iconPadding="18dp"
        app:iconTint="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonProfileHistory" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:foreground="@drawable/rounded_border"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/profile_exit_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonProfileSettings" />

</androidx.constraintlayout.widget.ConstraintLayout>