<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.collection.update.UpdateCollectionActivity">


    <TextView
        android:id="@+id/textViewCreateCollectionTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ellipsize="end"
        android:letterSpacing="0.03"
        android:singleLine="true"
        android:text="@string/collection_change_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonArrowBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButtonArrowBack"
        app:layout_constraintTop_toTopOf="@+id/imageButtonArrowBack" />

    <ImageButton
        android:id="@+id/imageButtonArrowBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image_default_description"
        android:padding="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/collectionNameInput"
        style="@style/editTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/chat_input_rounded_border"
        android:hint="@string/collection_name_input_hint"
        android:paddingHorizontal="16dp"
        android:paddingVertical="7dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_a8_text"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreateCollectionTitle"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageViewCollectionIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image_default_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collectionNameInput"
        app:srcCompat="@drawable/ic_1" />

    <Button
        android:id="@+id/buttonChooseIcon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:foreground="@drawable/rounded_border"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/collection_choose_icon_btn"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewCollectionIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewCollectionIcon"
        app:layout_constraintTop_toTopOf="@+id/imageViewCollectionIcon"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonSaveIcon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingVertical="13dp"
        android:text="@string/collection_save_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCollectionIcon"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonDeleteIcon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:foreground="@drawable/rounded_border"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/collection_delete_btn"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSaveIcon"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>