<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/profile_dialog_fragment_background_color"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <Button
            android:id="@+id/profileDialogGalleryBnt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:foreground="@drawable/rounded_border"
            android:text="@string/profile_dialog_fragment_gallery_btn"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="@+id/profileDialogCancelBnt"
            app:layout_constraintStart_toStartOf="@+id/profileDialogCancelBnt"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/profileDialogCameraBnt"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:foreground="@drawable/rounded_border"
            android:text="@string/profile_dialog_fragment_camera_btn"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="@+id/profileDialogSaveBnt"
            app:layout_constraintStart_toStartOf="@+id/profileDialogSaveBnt"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            tools:ignore="TextContrastCheck" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="1000dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewAvatarChoice"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/image_default_description"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/default_avatar_icon" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/profileDialogSaveBnt"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/profile_dialog_fragment_save_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/profileDialogCameraBnt"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/profileDialogCancelBnt"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/profile_dialog_fragment_cancel_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/profileDialogGalleryBnt"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>